--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <section class="section">
         <h1 class="title" id="main-title">나만의 동물상 테스트</h1>
         <div class="image-container">
-            <img src="img/mainimage.jpg" alt="Main Image" class="image">
+            <img src="img/배너 사진.png" alt="Main Image" class="image">
         </div>
     </section>
     <h2 class="subtitle" id="subtitle">얼굴로 보는 인공지능 동물상 테스트</h2>
